platform/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    app.kubernetes.io/managed-by: platform-accelerator
    istio-injection: enabled
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: ""
